--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,pep8,pypy
+envlist = py27,py33,pep8,pypy,cover
 
 [testenv]
 commands = nosetests --verbosity=3 --all-modules 
@@ -7,3 +7,6 @@ deps = -r{toxinidir}/test_requirements.txt
 
 [testenv:pep8]
 commands = pep8 signalslot --repeat --show-source
+
+[testenv:cover]
+commands = nosetests --with-coverage --cover-erase --cover-package=signalslot --verbosity=3 --all-modules 
