--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ env:
   - TOX_ENV=cover
 install:
   - pip install tox 
-  - [ "x$TOX_ENV" = 'xcover' ] && pip install coveralls
+  - if [ "x$TOX_ENV" = 'xcover' ]; then pip install coveralls; fi
 script:
   - tox -e $TOX_ENV
 after_success:
-  - [ "x$TOX_ENV" = 'xcover' ] && coveralls
+  - if [ "x$TOX_ENV" = 'xcover' ]; then coveralls; fi
