--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,7 @@ env:
   - TOX_ENV=cover
 install:
   - pip install tox 
-  - if [ "x$TOX_ENV" = 'xcover' ]; then pip install coveralls; fi
 script:
   - tox -e $TOX_ENV
 after_success:
-  - if [ "x$TOX_ENV" = 'xcover' ]; then coveralls; fi
+  - coveralls -v
