--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,py33,pep8,pypy,cover
+envlist = py27,py33,pep8,pypy
 
 [testenv]
 commands = nosetests --verbosity=3 --all-modules 
@@ -8,5 +8,5 @@ deps = -r{toxinidir}/test_requirements.txt
 [testenv:pep8]
 commands = pep8 signalslot --repeat --show-source
 
-[testenv:cover]
-commands = nosetests --with-coverage --cover-erase --cover-package=signalslot --verbosity=3 --all-modules 
+[pep8]
+exclude = .tox
