--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
   - TOX_ENV=pep8
   - TOX_ENV=pypy
 install:
-  - pip install tox 
+  - pip install tox coveralls
 script:
   - tox -e $TOX_ENV
 after_success:
