Many minor changes.
- Removed some code by forcing slots to accept **kwargs,
- Improved documentation,
- Use py.test instead of nosetest.

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,5 +8,8 @@ cover-tests=1
 cover-erase=1
 cover-html-dir=build
 
+[pytest]
+addopts = --doctest-modules --cov signalslot --cov-report html
+
 [metadata]
 description-file = README.rst
