--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27,py33,pep8,pypy
 
 [testenv]
-commands = nosetests --verbosity=3 --all-modules 
+commands = py.test signalslot
 deps = -r{toxinidir}/test_requirements.txt
 
 [testenv:pep8]
