--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27,py33,pep8,pypy
 
 [testenv]
-commands = py.test signalslot
+commands = py.test signalslot/signal.py signalslot/tests.py
 deps = -r{toxinidir}/test_requirements.txt
 
 [testenv:pep8]
