--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 envlist = py27,py33,pep8,pypy
 
 [testenv]
-commands = py.test signalslot/signal.py signalslot/tests.py signalslot/contrib/dynamic_state.py
+commands = py.test signalslot/signal.py signalslot/queue.py signalslot/tests.py signalslot/contrib/dynamic_state.py
 deps = -r{toxinidir}/test_requirements.txt
 
 [testenv:pep8]
