Pytest configuration update

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,12 @@ cover-erase=1
 cover-html-dir=build
 
 [pytest]
-addopts = --doctest-modules --cov signalslot --cov-report html
+addopts = --pep8 --cov signalslot --cov-report html
+python_files = signalslot/*.py
+norecursedirs = .git docs .tox
+looponfailroots = signalslot
+pep8ignore =
+    */tests.py ALL
 
 [metadata]
 description-file = README.rst
