Test configuration update

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ cover-erase=1
 cover-html-dir=build
 
 [pytest]
-addopts = --pep8 --cov signalslot --cov-report html
+addopts = --pep8 --cov signalslot --cov-report html --doctest-modules
 python_files = signalslot/*.py
 norecursedirs = .git docs .tox
 looponfailroots = signalslot
