--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,8 @@
 [tox]
-envlist = py27,pep8,pypy
+envlist = py27,pep8
 
 [testenv]
-commands = py.test signalslot
+commands = py.test --doctest-modules signalslot
 deps = -r{toxinidir}/test_requirements.txt
 
 [testenv:pep8]
