.coveragerc, tox.ini: Omit tests from coverage.
Turns out *THIS* is how it's done.

--- a/.coveragerc
+++ b/.coveragerc
@@ -2,7 +2,9 @@
 [run]
 branch = True
 source = signalslot
-include = ./signalslot*
+omit =
+	*/tests.py
+	*/test.py
 
 [report]
 ignore_errors = True
