setup.cfg: fix pytest section

--- a/setup.cfg
+++ b/setup.cfg
@@ -8,7 +8,7 @@ cover-tests=1
 cover-erase=1
 cover-html-dir=build
 
-[pytest]
+[tool:pytest]
 addopts = --pep8 --cov signalslot --cov-report html --doctest-modules
 python_files = signalslot/*.py
 norecursedirs = .git docs .tox
