--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,26 @@
 language: python
-python: 3.8
-env:
-  - TOX_ENV=pep8
-  - TOX_ENV=py34
-  - TOX_ENV=py35
-  - TOX_ENV=py36
-  - TOX_ENV=py37
-  - TOX_ENV=py38
+dist: xenial
+
+matrix:
+  include:
+     - python: 3.8
+       env:
+         - TOX_ENV=pep8
+     - python: 3.4
+       env:
+         - TOX_ENV=py34
+     - python: 3.5
+       env:
+         - TOX_ENV=py35
+     - python: 3.6
+       env:
+         - TOX_ENV=py36
+     - python: 3.7
+       env:
+         - TOX_ENV=py37
+     - python: 3.8
+       env:
+         - TOX_ENV=py38
 install:
   - pip install tox coveralls
 script:
