--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py27,pep8,py34
+envlist = pep8,py34,py35,py36,py37,py38
 
 [testenv]
 commands = py.test --doctest-modules signalslot
